<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="white.zac.hw2.EditFragment">
	<!--tools:showIn="@layout/activity_edit">-->

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:text="@string/first_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/first_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:text="@string/last_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/last_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:text="@string/home_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/home_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:text="@string/work_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/work_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:text="@string/mobile_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/mobile_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:text="@string/email_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</LinearLayout>
</android.support.v4.widget.NestedScrollView>
