<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="white.zac.hw2.EditFragment">
	<item
		android:id="@+id/action_done"
		android:title="@string/done"
		android:icon="@drawable/ic_check_white_24dp"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_cancel"
		android:title="@string/cancel"
		android:icon="@drawable/ic_clear_white_24dp"
		app:showAsAction="always"/>
	<item
		android:id="@+id/action_reload"
		android:icon="@drawable/ic_refresh_white_24dp"
		android:title="@string/action_reload"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_about"
		android:title="about"
		android:icon="@drawable/ic_about_white_24dp"
		app:showAsAction="always"/>
</menu>
